--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -594,11 +594,10 @@ endif()
 # GDK Packaging
 #
 
-if(   PLAYFIELD_TARGET_GDK_WINDOWS
-   OR PLAYFIELD_TARGET_GDK_XBOX_XS)
-
+if(PLAYFIELD_TARGET_GDK_WINDOWS)
   set(PKG_STAGING_DIR "${CMAKE_BINARY_DIR}/gdk_staging")
   set(PKG_OUTPUT_DIR  "${CMAKE_BINARY_DIR}/gdk_package")
+  set(PKG_LAYOUT_XML "${CMAKE_BINARY_DIR}/layout.xml")
 
   # EXE
   set(GAME_TARGET playfield)
@@ -607,30 +606,28 @@ if(   PLAYFIELD_TARGET_GDK_WINDOWS
   set(GDK_MAKEPKG "C:/Program Files (x86)/Microsoft GDK/bin/makepkg.exe")
   set(GDK_WDAPP   "C:/Program Files (x86)/Microsoft GDK/bin/wdapp.exe")
 
-  add_custom_command(TARGET ${GAME_TARGET} POST_BUILD
-    # Copy asset folder.
-    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/samples/rush" "${PKG_STAGING_DIR}"
+  add_custom_command(TARGET playfield POST_BUILD
+    # Make gdk_staging.
+    COMMAND ${CMAKE_COMMAND} -E make_directory "${PKG_STAGING_DIR}"
+    # Copy assets.
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/samples/bouncer/main.pf" "${PKG_STAGING_DIR}/"
     # Copy EXE file.
     COMMAND ${CMAKE_COMMAND} -E copy "$<TARGET_FILE:${GAME_TARGET}>" "${PKG_STAGING_DIR}/"
     # Copy config files.
-    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/gdk/MicrosoftGame.config" "${PKG_STAGING_DIR}/"
-    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/gdk/appxmanifest.xml"     "${PKG_STAGING_DIR}/"
-  )
-
-  add_custom_target(gdk_package
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/windows/gdk-desktop/MicrosoftGame.config" "${PKG_STAGING_DIR}/"
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/windows/gdk-desktop/logo-44x44.png" "${PKG_STAGING_DIR}/"
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/windows/gdk-desktop/logo-100x100.png" "${PKG_STAGING_DIR}/"
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/windows/gdk-desktop/logo-150x150.png" "${PKG_STAGING_DIR}/"
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_SOURCE_DIR}/resources/windows/gdk-desktop/splashscreen.png" "${PKG_STAGING_DIR}/"
+    # Make gdk_output.
     COMMAND ${CMAKE_COMMAND} -E make_directory "${PKG_OUTPUT_DIR}"
-    COMMAND "${GDK_MAKEPKG}" pack /f "${PKG_STAGING_DIR}" /d "${PKG_OUTPUT_DIR}"
-    DEPENDS ${GAME_TARGET}
-    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
+    # Make a mapping file.
+    COMMAND "${GDK_MAKEPKG}" genmap /f "${PKG_LAYOUT_XML}" /d "${PKG_STAGING_DIR}"
+    # pack
+    COMMAND "${GDK_MAKEPKG}" pack /f "${PKG_LAYOUT_XML}" /lt /d "${PKG_STAGING_DIR}" /nogameos /pc /pd "${PKG_OUTPUT_DIR}"
+    # Install to local.
+    COMMAND "${GDK_WDAPP}" install "${PKG_OUTPUT_DIR}/PlayfieldEngineSample_1.0.0.0_x64__6ng4m9yy9amvm.msixvc"
   )
-
-  # Install to local and run.
-  #add_custom_target(gdk_install_and_run
-  #  COMMAND "${GDK_WDAPP}" install /package "${PKG_OUTPUT_DIR}"
-  #  COMMAND "${GDK_WDAPP}" launch
-  #  DEPENDS gdk_package
-  #)
-
 endif()
 
 #
