--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -422,6 +422,7 @@ if(PLAYFIELD_TARGET_WINDOWS)
   if(MSVC)
     target_compile_options(playfield PUBLIC /utf-8)
     target_link_options(playfield PUBLIC /SUBSYSTEM:WINDOWS)
+    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
   else()
     target_compile_options(playfield PUBLIC -municode -finput-charset=utf-8 -fexec-charset=utf-8)
     target_link_options(playfield PUBLIC -mwindows -static)
